--- a/package.json
+++ b/package.json
@@ -11,21 +11,68 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/lab": "^6.0.0-beta.8",
+    "@mui/material": "^6.1.0",
+    "@mui/x-date-pickers": "^7.17.0",
+    "@mui/x-date-pickers-pro": "^7.17.0",
+    "@toolpad/core": "^0.6.0",
+    "axios": "^1.7.7",
+    "change-case": "^5.4.4",
+    "chart.js": "^4.4.4",
+    "date-fns": "^3.6.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "framer-motion": "^11.5.4",
+    "i18next": "^23.15.1",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.0.1",
+    "react-international-phone": "^4.3.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
+    "string-to-color": "^2.2.2",
+    "stylis": "^4.3.4",
+    "stylis-plugin-rtl": "^2.1.1",
+    "swiper": "^11.1.14",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
+    "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.10.0",
+    "@types/eslint": "^9.6.1",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/stylis": "^4.2.6",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-universe": "^13.0.0",
+    "eslint-plugin-i18next": "^6.0.9",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-perfectionist": "3.5.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-sonarjs": "^2.0.2",
+    "eslint-plugin-sort-destructure-keys": "^2.0.0",
+    "eslint-plugin-unicorn": "^55.0.0",
     "git-cz": "^4.9.0",
     "globals": "^15.9.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.5.0",
+    "vite": "^5.4.5"
   }
 }
