feat: 🎸 absolute path (srv/Folder)

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,6 +17,7 @@
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "noImplicitReturns": true,
+    "baseUrl": "."
   },
   "include": ["src"]
 }
