--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.10.0",
     "@types/eslint": "^9.6.1",
+    "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/stylis": "^4.2.6",
