--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "change-case": "^5.4.4",
     "chart.js": "^4.4.4",
     "date-fns": "^3.6.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
     "framer-motion": "^11.5.4",
     "i18next": "^23.15.1",
     "lodash": "^4.17.21",
@@ -35,7 +34,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-i18next": "^15.0.1",
+    "react-i18next": "^15.0.2",
     "react-international-phone": "^4.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
@@ -45,13 +44,13 @@
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^11.1.14",
     "zod": "^3.23.8",
-    "zustand": "^4.5.5"
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.10.0",
     "@types/eslint": "^9.6.1",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.5.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/stylis": "^4.2.6",
@@ -61,13 +60,14 @@
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-universe": "^13.0.0",
-    "eslint-plugin-i18next": "^6.0.9",
+    "eslint-plugin-i18next": "^6.1.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
-    "eslint-plugin-perfectionist": "3.5.0",
+    "eslint-plugin-perfectionist": "3.6.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "eslint-plugin-sonarjs": "^2.0.2",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "eslint-plugin-unicorn": "^55.0.0",
