feat: 🎸 add HeroSection with react-water-wave package

--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
+    "react-water-wave": "^2.0.1",
     "string-to-color": "^2.2.2",
     "stylis": "^4.3.4",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^11.1.14",
     "zod": "^3.23.8",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.0-rc.2",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
