--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/lab": "^6.0.0-beta.8",
     "@mui/material": "^6.1.0",
     "@toolpad/core": "^0.6.0",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.7",
     "change-case": "^5.4.4",
     "chart.js": "^4.4.4",
