--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
     "@hookform/resolvers": "^3.9.0",
+    "@motionone/utils": "^10.18.0",
     "@mui/icons-material": "^6.1.0",
     "@mui/lab": "^6.0.0-beta.8",
     "@mui/material": "^6.1.0",
