feat: 🎸 add ContactSection

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 VITE_API_URL=https://api.github.com/users/kerolos2000/repos
 VITE_APP_NAME=kerolos Portfolio
+VITE_EMAIL_SERVICE_ID=service_asq1jr9
+VITE_EMAIL_TEMPLATE_ID=template_fq3cldx
+VITE_EMAIL_USER_ID=pPvI55oTnmo827Wf4
